--- a/application/templates/customer/updated_menu.html
+++ b/application/templates/customer/updated_menu.html
@@ -28,8 +28,11 @@
     <div class="product-grid">
         {% for product in products %}
         <div class="product-card">
-
-            <img class="image-top" style="border-radius: 20%;" src="{{product.pictures}}" alt="{{ product.name }}">
+            <!-- for development image view-->
+            <!--<img class="image-top" style="border-radius: 20%;" src="{{url_for('static', filename='css/images/products/'+ product.pictures ) }}" alt="{{ product.name }}">
+        -->
+            <!-- production using cloudinary-->
+            <img class="image-top" style="border-radius: 20%;" src="{{ product.pictures }}" alt="{{ product.name }}">
             <div class="product-name">{{ product.productname }}</div>
             <div class="product-price">M{{ product.price }}</div>
             <div class="product-description"><p>{{ product.description }}</p></div>
